added score component
